# src/main/java/com/vertice/api/student/StudentMapper.java
@@ -1,5 +1,6 @@
 package com.vertice.api.student;
 
+import com.vertice.api.generated.model.StudentCreateRequest;
 import com.vertice.api.generated.model.StudentRequest;
 import com.vertice.api.generated.model.StudentResponse;
 import org.mapstruct.Mapper;
@@ -10,10 +11,12 @@ import org.mapstruct.MappingTarget;
 public interface StudentMapper {
 
     @Mapping(target = "id", ignore = true)
-    Student toEntity(StudentRequest request);
+    @Mapping(target = "passwordHash", ignore = true)
+    Student toEntity(StudentCreateRequest request);
 
     StudentResponse toResponse(Student student);
 
     @Mapping(target = "id", ignore = true)
+    @Mapping(target = "passwordHash", ignore = true)
     void updateEntityFromRequest(StudentRequest request, @MappingTarget Student student);
 }
