# src/main/java/com/vertice/api/trainer/TrainerMapper.java
@@ -1,5 +1,6 @@
 package com.vertice.api.trainer;
 
+import com.vertice.api.generated.model.TrainerCreateRequest;
 import com.vertice.api.generated.model.TrainerRequest;
 import com.vertice.api.generated.model.TrainerResponse;
 import org.mapstruct.Mapper;
@@ -10,10 +11,12 @@ import org.mapstruct.MappingTarget;
 public interface TrainerMapper {
 
     @Mapping(target = "id", ignore = true)
-    Trainer toEntity(TrainerRequest request);
+    @Mapping(target = "passwordHash", ignore = true)
+    Trainer toEntity(TrainerCreateRequest request);
 
     TrainerResponse toResponse(Trainer trainer);
 
     @Mapping(target = "id", ignore = true)
+    @Mapping(target = "passwordHash", ignore = true)
     void updateEntityFromRequest(TrainerRequest request, @MappingTarget Trainer trainer);
 }
